# VoxEngine

./: .gitignore  AGENTS.md  README.md  agents.md  pyproject.toml
docs/: api.md  project_format.md
examples/example_project/cast/: README.txt
examples/example_project/script/: scenes.json
tests/: test_voxengine.py
voxengine/: LICENSE  README.md  __init__.py  __main__.py  cli.py  pyproject.toml
voxengine/adapters/audio/: normalize.py
voxengine/adapters/llm/: ollama.py
voxengine/adapters/tts/: base.py  beep.py  cosyvoice.py  piper.py  xtts.py
voxengine/api/: routes_llm.py  routes_projects.py  routes_tts.py  schemas.py  server.py
voxengine/core/: engine.py  errors.py  logging.py  queue.py  registry.py  render.py  tts_service.py
voxengine/ethics/: policy.py
voxengine/examples/: quickstart.py
voxengine/examples/example_project/: project.json
voxengine/project/: cast.py  scripts.py
voxengine/voxengine/adapters/audio/: resample.py  trim.py
voxengine/voxengine/adapters/llm/: llama_cpp.py
voxengine/voxengine/api/: routes_render.py  routes_tts.py  schemas.py
voxengine/voxengine/core/: cache.py  config.py  engine.py  logging.py
voxengine/voxengine/ethics/: attest.py  policy.py
voxengine/voxengine/project/: format.py
